# tomswiftr

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  wellerisms.ipynb
src/tomswiftr/: model.py  text_provider.py
